--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,6 +117,10 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  --color-primary: #5c55df;
+  --color-primary-200: #4a43de;
+  --color-primary-300: #2f28b5;
 }
 
 @layer base {
